arcsoft/inc/arcsoft_face_sdk.h

//******************************** 人脸3D 角度信息 ***********************************
typedef struct
{
	MFloat* roll;
	MFloat* yaw;
	MFloat* pitch;
	MInt32* status;					//0: 正常，其他数值：出错
	MInt32 num;
}ASF_Face3DAngle, *LPASF_Face3DAngle;
/************************************************************************
* 获取3D角度信息
************************************************************************/
MRESULT ASFGetFace3DAngle(
	MHandle hEngine,					// [in] 引擎handle
	LPASF_Face3DAngle p3DAngleInfo		// [out] 检测到脸部3D 角度信息
);
//******************************** 活体信息 ***********************************
typedef struct
{
	MInt32*	isLive;			// [out] 判断是否真人， 0：非真人；
	//						1：真人；
	//						-1：不确定； 
	//						-2:传入人脸数>1；
	MInt32 num;
}ASF_LivenessInfo, *LPASF_LivenessInfo;
/************************************************************************
* 获取RGB活体结果
************************************************************************/
MRESULT ASFGetLivenessScore(
	MHandle hEngine,					// [in] 引擎handle
	LPASF_LivenessInfo livenessInfo		// [out] 检测RGB活体结果
);
/************************************************************************
* 获取IR活体结果
************************************************************************/
MRESULT ASFGetLivenessScore_IR(
	MHandle				hEngine,			// [in] 引擎handle
	LPASF_LivenessInfo	 irLivenessInfo		// [out] 检测到IR活体结果
);