src/imp/arcsoft_sys.rs

pub type LPASF_Face3DAngle = *mut ASF_Face3DAngle;
extern "C" {
    /// 获取3D角度信息
    pub fn ASFGetFace3DAngle(hEngine: MHandle, p3DAngleInfo: LPASF_Face3DAngle) -> MRESULT;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct ASF_LivenessInfo {
    pub isLive: *mut MInt32,
    pub num: MInt32,
}
#[test]
fn bindgen_test_layout_ASF_LivenessInfo() {
    assert_eq!(
        ::std::mem::size_of::<ASF_LivenessInfo>(),
        16usize,
        concat!("Size of: ", stringify!(ASF_LivenessInfo))
    );
    assert_eq!(
        ::std::mem::align_of::<ASF_LivenessInfo>(),
        8usize,
        concat!("Alignment of ", stringify!(ASF_LivenessInfo))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ASF_LivenessInfo>())).isLive as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_LivenessInfo),
            "::",
            stringify!(isLive)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<ASF_LivenessInfo>())).num as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(ASF_LivenessInfo),
            "::",
            stringify!(num)
        )
    );
}
pub type LPASF_LivenessInfo = *mut ASF_LivenessInfo;
extern "C" {
    /// 获取RGB活体结果
    pub fn ASFGetLivenessScore(hEngine: MHandle, livenessInfo: LPASF_LivenessInfo) -> MRESULT;
}
extern "C" {
    /// 获取IR活体结果
    pub fn ASFGetLivenessScore_IR(hEngine: MHandle, irLivenessInfo: LPASF_LivenessInfo) -> MRESULT;
}
